src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Defend</fullName>
        <description>Sales process for Olam Defend Opportunity type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Briefing</fullName>
        </values>
        <values>
            <fullName>Closed Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Offering</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Develop</fullName>
        <description>Sales process for Olam Develop Opportunity type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Briefing</fullName>
        </values>
        <values>
            <fullName>Closed Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Offering</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Gain</fullName>
        <description>Sales process for Olam Gain Opportunity Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing Won</fullName>
        </values>
        <values>
            <fullName>Offering</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PLBS Tender</fullName>
        <description>This sales process belongs to Vietnam PLBS Tendering</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Partial Won</fullName>
        </values>
        <values>
            <fullName>Preparing Sample%2FPackaging</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PLBS Tender Product</fullName>
        <description>This sales process belongs to Vietnam PLBS Tender Product</description>
        <isActive>true</isActive>
        <values>
            <fullName>Artwork Develop</fullName>
        </values>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Commercialize</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Delivery</fullName>
        </values>
        <values>
            <fullName>Opening</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service%2FPresent</fullName>
        <description>Sales process for Olam Service/Present Opportunity type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Briefing</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tendering Opportunity</fullName>
        <description>Sales Business Process for Tendering</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing Won</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
        <values>
            <fullName>Submission</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Created_By_Name__c</fullName>
        <formula>Account.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Developing_Hours__c</fullName>
        <label>Actual Developing Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_MT__c</fullName>
        <formula>Plbs_Weight_G__c *  Plbs_Annual_Unit__c / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Account Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_from_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application from Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_from_Pardot__c</fullName>
        <label>Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Pardot</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awarded__c</fullName>
        <formula>IF( ISNULL(  Unit_Awarded__c ) , NULL ,  MT_Awarded__c /  Annual_MT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Awarded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bid_Close__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bid Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Open__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bid Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Briefing_Evaluvation_Change__c</fullName>
        <description>This field will stamp the date/time when the project status is changed to Briefing Evaluvation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Briefing Evaluvation Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgeted_Developing_Hours__c</fullName>
        <label>Budgeted Developing Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocoa</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Spice</fullName>
                </value>
                <value>
                    <fullName>Edible_Nuts</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled by Olam</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Customer</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Mix__c</fullName>
        <inlineHelpText>If Case Mix is yes, Kindly fill in Additional Notes</inlineHelpText>
        <label>Case Mix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WET</fullName>
                </value>
                <value>
                    <fullName>FAT</fullName>
                </value>
                <value>
                    <fullName>DRY</fullName>
                </value>
                <value>
                    <fullName>MISCELLANEOUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Helps the user to explain why the opportunity is won/lost/cancel reason</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Commercialised_Products__c</fullName>
        <label>Count of Commercialised Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.IsCommercialisedProduct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Acceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if the customer has accepted the offer of the products, but has not signed any contract or order form.</inlineHelpText>
        <label>Customer Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Test</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Zone__c</fullName>
        <formula>TEXT(Account.Regions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Stage_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Development Stage Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Einstein_Opportunity_Score__c</fullName>
        <label>Einstein Opportunity Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume_MT__c</fullName>
        <inlineHelpText>Possible / Potential Volume Olam (MT) expects to get</inlineHelpText>
        <label>Estimated Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Local_USD__c</fullName>
        <label>Exchange Rate (Local /USD)*</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_USD_VND__c</fullName>
        <label>Exchange Rate (USD/VND)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Margin_TCB__c</fullName>
        <formula>Final_Quote__r.Margin_TCB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Margin (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Price_Pack__c</fullName>
        <label>Final Price/ Pack</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Price_Per_Pack_USD__c</fullName>
        <formula>ROUND( Final_Price_Pack__c *    Parent_Opportunity__r.Exchange_Rate_Local_USD__c  ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price Per Pack (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Quote.OpportunityId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Sample_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Sample Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Driver_to_Win_Project__c</fullName>
        <label>Key Driver to Win Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Time to Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <label>Local Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IsoCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_Awarded__c</fullName>
        <formula>IF( ISNULL( Unit_Awarded__c ) , NULL , Unit_Awarded__c *  Plbs_Weight_G__c / 1000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT Awarded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plbs_Country_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_to_Briefing_Acceptance_Duration__c</fullName>
        <formula>IF(
   Briefing_Evaluvation_Change__c  -  CreatedDate  &gt; 0 ,
  TEXT( FLOOR(  Briefing_Evaluvation_Change__c  -  CreatedDate  ) ) &amp; &quot; days &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to Briefing Acceptance Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Logs__c</fullName>
        <label>Number of Logs</label>
        <summaryForeignKey>Opportunity_Log__c.OpportunityID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Sent__c</fullName>
        <label>Number of Samples Sent</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Sampling_Status__c</field>
            <operation>equals</operation>
            <value>Samples Sent, Pending Feedback, Resampling, Sample Accepted, Sample Rejected, Resample Sent to the Customer, &quot;Sample Approved, asking for bulk sample&quot;, Kept on Hold, No Response, Project Dropped</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offering_Stage_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Offering Stage Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OlamQuoteNumber__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>OlamQuoteNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Olam_Cocoa_Plant__c</fullName>
        <label>Olam Cocoa Plant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>HM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Text_Only__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type (Text Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Score__c</fullName>
        <label>Opportunity Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value_for_MT__c</fullName>
        <label>Opportunity Value for MT</label>
        <summarizedField>OpportunityLineItem.Converted_Offer_per_MT__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OptyP1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OptyP1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Contract_Number__c</fullName>
        <description>This field is required before setting the stage as Closed Won</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Order/ Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID_Match__c</fullName>
        <formula>CASESAFEID(OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDI_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDI Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDI_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDI Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDNI_Approval_Status__c</fullName>
        <label>PDI Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PD_I_Member_is_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add a PD&amp;I member to the Opportunity Team and give him/her Read/Write access to your opportunity before submitting it to the PD&amp;I member for approval.</inlineHelpText>
        <label>PD&amp;I Member is Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLBS_Opportunity_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLBS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>PLBS_Product__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLBS_Retail_Price__c</fullName>
        <formula>Parent_Opportunity__r.Exchange_Rate_Local_USD__c *  Plbs_Shelf_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLBS_Total_Profit__c</fullName>
        <formula>Unit_Awarded__c *  Final_Margin_TCB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLBS_Total_Revenue__c</fullName>
        <formula>Final_Price_Per_Pack_USD__c *  Unit_Awarded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLM_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>True if PLM is added to the opportunity team</inlineHelpText>
        <label>PLM Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLM_Approval_Status__c</fullName>
        <label>PLM Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLM_PDI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLM/ PDI</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used for tagging the Develop opportunity to the Tender opportunity when the samplings are requested</description>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Related)</relationshipLabel>
        <relationshipName>ChildOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partial_Win__c</fullName>
        <formula>IF( AND(ISPICKVAL(StageName, &quot;Closing Won&quot;),( Number_of_Logs__c &gt; 0)) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partial Win</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In Charge</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plbs_Annual_Unit__c</fullName>
        <label>Annual Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plbs_Est_Award__c</fullName>
        <label>Est. Award %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plbs_Manufacturing_Facility__c</fullName>
        <label>Manufacturing Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plbs_Country_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plbs_Shelf_Price__c</fullName>
        <inlineHelpText>Local Currency</inlineHelpText>
        <label>Shelf Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plbs_Weight_G__c</fullName>
        <label>Weight(G)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Present_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link to Presentation Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Presentation Opportunity</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Closed</value>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presentation_Opty__c</fullName>
        <formula>RecordType.Name = &apos;Present&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presentation Opty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Owner_ID__c</fullName>
        <formula>IF( TEXT(Business_Unit__c) = &apos;Cocoa&apos;,  Account.Cocoa_Owner__c ,
IF( TEXT(Business_Unit__c) = &apos;Dairy&apos;,  Account.Dairy_Owner_Id__c , 
IF( TEXT(Business_Unit__c) = &apos;Spice&apos;,   Account.Spice_Owner_Id__c ,
IF( TEXT(Business_Unit__c) = &apos;Edible_Nuts&apos;,  Account.Edible_Nuts_Owner_Id__c ,&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Cocoa_Owner_ID_match__c</fullName>
        <description>Helps to find the opportunity that is created by the primary owner of the Account</description>
        <formula>IF(Owner_ID_Match__c == Account.Cocoa_Owner__c, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Cocoa Owner ID match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Dairy_Owner_ID_match__c</fullName>
        <formula>IF(Owner_ID_Match__c ==  Account.Dairy_Owner_Id__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Dairy Owner ID match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Edible_Nuts_Owner_ID_match__c</fullName>
        <formula>IF(Owner_ID_Match__c ==  Account.Edible_Nuts_Owner_Id__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Edible Nuts Owner ID match</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>